style(client/src/css/TaskList.css): Fix misaligned button

--- a/client/src/css/TaskList.css
+++ b/client/src/css/TaskList.css
@@ -6,6 +6,8 @@
 }
 
 .fetch-tasks-button {
+	/* Ensures the button is not misaligned */
+	margin: 0 0 1rem 0;
 	width: 100%;
 	text-align: center;
 }
